# fast3d-teleop-submodule

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: build_trt.py  download_assets.py  upload_to_modelscope.py  visualize_sidebyside.py  visualize_skeleton.py
src/fast3d_teleop_submodule/: __init__.py  _cli_build_trt.py  _cli_download.py  conversion.py  core.py  env_setup.py  server.py
