[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast3d-teleop-submodule"
version = "0.1.0"
description = "Teleoperation-oriented Fast-SAM-3D-Body submodule for RGB-to-SMPL control packets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "xuedingrong" }
]
dependencies = [
  "numpy",
  "opencv-python",
  "scipy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
