[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast3d-teleop-submodule"
version = "0.3.0"
description = "Vision mocap backend for Teleopit — RGB-to-SMPL-to-ZMQ pipeline. Vendored glue code, minimal upstream dependency."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "xuedingrong" }
]
dependencies = [
  "numpy",
  "opencv-python",
  "scipy",
]

[project.optional-dependencies]
server = [
  "pyzmq>=25",
  "msgpack>=1.0",
]
setup = [
  "modelscope",
]

[project.scripts]
fast3d-mocap-server = "fast3d_teleop_submodule.server:main"
fast3d-download-assets = "fast3d_teleop_submodule._cli_download:main"
fast3d-build-trt = "fast3d_teleop_submodule._cli_build_trt:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
